# dim_sum_playground

./: .gitlab-ci.yml  README.md  _CoqProject  coq-dimsum.opam
dimsum/: axioms.v  base.v  biown.v  irefines.v  itree_mod.v  link.v  prepost.v  product_srefines.v  proof_techniques.v  refinement_examples.v  satisfiable.v  seq_product.v  spec.v
dimsum/iris/: biown.v  combinators.v  expr.v  expr2.v  iris.v  mono_ord.v  ord_later.v  sat.v  sim.v  sim2.v  spec.v  spec2.v  weak_embed.v
dimsum/itree/: events.v  rec.v  small_itree.v  wp_itree.v
dimsum/itree/program_logic/: language.v
dimsum_examples/: asm.v  coroutine.v  coroutine_example.v  echo_original.v  heapUR.v  int_ptr_cast.v  memmove.v  print.v  r2a_bij_vertical.v  rec.v  rec_heap_bij.v  rec_heap_bij_pure.v  rec_heap_inj.v  rec_heap_inj_vertical.v  rec_to_asm.v  rec_to_asm_examples.v
dimsum_examples/compiler/: codegen.v  compiler.v  linear_rec.v  linearize.v  mem2reg.v  ssa.v
dimsum_examples/iris/: asm.v  echo.v  echo_noloop.v  echo_noswitch.v  final_echo.v  memmove.v  my_echo.v  old_echo.v  rec.v  rec2.v  rec_basic.v  unfinished_echo.v
