opam-version: "2.0"
maintainer: "Michael Sammler <msammler@mpi-sws.org>"
authors: "The DimSum team"
license: "BSD-3-Clause"
homepage: "https://gitlab.mpi-sws.org/iris/dimsum"
bug-reports: "https://gitlab.mpi-sws.org/iris/dimsum/issues"
dev-repo: "git+https://gitlab.mpi-sws.org/iris/dimsum.git"
version: "dev"

synopsis: "DimSum"

depends: [
  "coq" { (>= "8.18.0" & < "8.19~") | (= "dev") }
  "coq-iris" { (= "dev.2023-11-20.1.7d72ccb5") | (= "dev") }
  "coq-ext-lib" { (= "0.11.8") } # fix coq-ext-lib version that is compatible with 8.17
  # "coq-paco" { (= "4.1.2") } # fix coq-paco version since coq-itree does not build with master
  "coq-itree" { (= "5.1.2") }
  "coq-record-update" { (= "0.3.3") | (= "dev") }
]

build: [make "-j%{jobs}%"]
install: [make "install"]
