opam-version: "2.0"
maintainer: "Michael Sammler <msammler@mpi-sws.org>"
authors: "The DimSum team"
license: "BSD-3-Clause"
homepage: "https://gitlab.mpi-sws.org/iris/dimsum"
bug-reports: "https://gitlab.mpi-sws.org/iris/dimsum/issues"
dev-repo: "git+https://gitlab.mpi-sws.org/iris/dimsum.git"
version: "dev"

synopsis: "DimSum"

depends: [
  "coq" { (>= "8.20.0" & < "8.21~") | (= "dev") }
  "coq-iris" { (= "dev.2024-11-28.1.145a30ce") | (= "dev") }
  "coq-ext-lib" { (= "0.12.1") } # fix coq-ext-lib version that is compatible with 8.19
  "coq-paco" { (= "4.2.0") } # fix coq-paco version since coq-itree does not build with master
  "coq-itree" { (= "5.1.2") }
  "coq-record-update" { (= "0.3.4") | (= "dev") }
]

build: [make "-j%{jobs}%"]
install: [make "install"]
